--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+miniRT
+.vscode/settings.json
+.gitignore
+src/test.c
+.cache/
+build.log
+inaweekend
+.gitignore
+inaweek
